// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`primary nav group collapsed and empty nav bar 1`] = `
Array [
  <li
    className="Zbf5IjDJoFOYgLMhuYJX3"
  >
    <hr
      className="AzU6OD_KpO59W4OjMaKrt _1nz23RxJRG8lzjw4UEkam1 _3ehD-Vp1xzL3c4pv4NXQRU _1c9yGr-7IZ-IwQq0y_q_IK"
    />
  </li>,
  <li
    className="Zbf5IjDJoFOYgLMhuYJX3"
  >
    <ul />
  </li>,
]
`;

exports[`primary nav group collapsed and not empty nav bar 1`] = `
Array [
  <li
    className="Zbf5IjDJoFOYgLMhuYJX3"
  >
    <hr
      className="AzU6OD_KpO59W4OjMaKrt _1nz23RxJRG8lzjw4UEkam1 _3ehD-Vp1xzL3c4pv4NXQRU _1c9yGr-7IZ-IwQq0y_q_IK"
    />
  </li>,
  <li
    className="Zbf5IjDJoFOYgLMhuYJX3"
  >
    <ul>
      <span>
        mock_content
      </span>
    </ul>
  </li>,
]
`;

exports[`primary nav group expanded and empty nav bar 1`] = `null`;

exports[`primary nav group expanded and not empty nav bar 1`] = `null`;
